[gd_scene load_steps=8 format=2]

[ext_resource path="res://Exo2-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://StartMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=8]
size = 19
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="ParticlesMaterial" id=7]
render_priority = -1
emission_shape = 2
emission_box_extents = Vector3( 150, 100, 1 )
flag_disable_z = true
gravity = Vector3( -15, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
linear_accel = 12.0
scale = 5.0
color = Color( 0.92549, 0.905882, 0.905882, 1 )
anim_speed = 12.0

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.752941, 0.560784, 0.560784, 1 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1032.0
margin_bottom = 594.0
color = Color( 0.588235, 0.713726, 0.984314, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 96.0
margin_right = 1032.0
margin_bottom = 456.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1032.0
margin_bottom = 413.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1032.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 8 )
text = "Reducing food waste can stop climate change by reducing 
methane emissions from landfills.
.
 Cutting your food waste can reduce your carbon footprint by up 
to 300 kilograms of CO2 per year. 

Ask your bank if they are investing sustainably. You can opt out of 
funds investing in fossil fuels.

Transport accounts for 25% of greenhouse gas emissions!  Getting a train from London 
to Amsterdam creates 20x less emissions!

9 falafel and pitta meals are equal to 1 cheeseburger worth of CO2 emissions. 
Livestock, primarily cows,  produce 14.5% of greenhouse gas emissions. 
Reducing your meat intake makes a major difference.
"
align = 1
valign = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Label"]
margin_left = -8.0
margin_top = -95.0
margin_right = 1024.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 9 )
text = "What can you do?"
align = 1
autowrap = true
uppercase = true

[node name="Particles2D" type="Particles2D" parent="MarginContainer"]
position = Vector2( 530, 250 )
rotation = 0.000759751
scale = Vector2( 3.12003, 2.75159 )
amount = 50
process_material = SubResource( 7 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 380.0
margin_top = 441.0
margin_right = 664.0
margin_bottom = 560.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
margin_right = 284.0
margin_bottom = 119.0
alignment = 2

[node name="BackButton" type="Button" parent="MarginContainer2/VBoxContainer"]
margin_top = 69.0
margin_right = 284.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 6 )
text = "Back"

[connection signal="pressed" from="MarginContainer2/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
